2025-05 Feature Update for Version 2505 (5.0.3)

--- a/css/style.css
+++ b/css/style.css
@@ -2538,7 +2538,11 @@ select:focus {
 #whats-next,
 #tooSoon,
 #rewrite,
-#ai {
+#ai,
+#typeface,
+#colour,
+#icon-assets,
+#brainstorm {
     scroll-margin-top: 10vh;
 }
 
