2025-05 Feature Update for Version 2505 (5.0.10a)

--- a/css/style.css
+++ b/css/style.css
@@ -2554,7 +2554,9 @@ select:focus {
 #typeface,
 #colour,
 #icon-assets,
-#brainstorm {
+#brainstorm,
+#psrith,
+#cckint {
     scroll-margin-top: 10vh;
 }
 
