--- a/css/dark-mode-leg.css
+++ b/css/dark-mode-leg.css
@@ -101,26 +101,6 @@ body.dark-mode .breakpoint-on .classy-navbar .classy-menu {
 /* ------------------------------------------ */
 
 /* ------------------------------------------ 1.0 Home Page ------------------------------------------ */
-body.dark-mode #hero {
-    width: 100%;
-    height: 100vh;
-    background: url("../img/bg-img/hero.png") top right no-repeat;
-    background-size: cover;
-    position: relative;
-    transition: all 0.5s ease;
-}
-
-body.dark-mode #hero:before {
-    content: "";
-    background: #000000c6;
-    backdrop-filter: blur(2px);
-    position: absolute;
-    bottom: 0;
-    top: 0;
-    left: 0;
-    right: 0;
-}
-
 body.dark-mode #lrd {
     background-color: #18191a;
     padding-top: 50px;
@@ -154,50 +134,42 @@ body.dark-mode .breadcrumb-content .breadcrumb .breadcrumb-item-aag.active {
 body.dark-mode .card-body-nsl,
 body.dark-mode .card-nsl {
     background-color: #471418;
-    border-radius: 25px;
     transition: all 0.5s ease;
 }
-
 
 body.dark-mode .card-body-ewl,
 body.dark-mode .card-ewl {
     background-color: #0b3220;
-    border-radius: 25px;
     transition: all 0.5s ease;
 }
 
 body.dark-mode .card-body-ccl,
 body.dark-mode .card-ccl {
     background-color: #332701;
-    border-radius: 25px;
     transition: all 0.5s ease;
 }
 
 body.dark-mode .card-body-lrt,
 body.dark-mode .card-lrt {
     background-color: #313731;
-    border-radius: 25px;
     transition: all 0.5s ease;
 }
 
 body.dark-mode .card-body-tel,
 body.dark-mode .card-tel {
     background-color: #2a1806;
-    border-radius: 25px;
     transition: all 0.5s ease;
 }
 
 body.dark-mode .card-body-dtl,
 body.dark-mode .card-dtl {
     background-color: #012243;
-    border-radius: 25px;
     transition: all 0.5s ease;
 }
 
 body.dark-mode .card-body-nel,
 body.dark-mode .card-nel {
     background-color: #2e1a35;
-    border-radius: 25px;
     transition: all 0.5s ease;
 }
 
@@ -211,25 +183,19 @@ body.dark-mode .card-body-do,
 body.dark-mode .card-do {
     background-color: #242526;
     transition: all 0.5s ease;
-    border-radius: 25px;
 }
 
 body.dark-mode .accordion-button {
     background-color: #3a3b3c;
-    border-radius: 25px;
 }
 
 body.dark-mode .accordion-body,
 body.dark-mode .accordion-item {
     background-color: #242526;
     transition: all 0.5s ease;
-    border-radius: 25px;
+    border-bottom-right-radius: var(--bs-accordion-border-radius);
+    border-bottom-left-radius: var(--bs-accordion-border-radius);
     border-color: #000;
-    margin-bottom: 1em;
-}
-
-body.dark-mode .accordion-item:last-of-type>.accordion-header .accordion-button.collapsed {
-    border-radius: 25px;
 }
 
 body.dark-mode .acc-pi {
@@ -253,19 +219,19 @@ body.dark-mode .accordion-item:last-of-type {
 }
 
 body.dark-mode .accordion-item:last-of-type {
-    border-radius: 25px;
+    border-bottom-right-radius: var(--bs-accordion-border-radius);
+    border-bottom-left-radius: var(--bs-accordion-border-radius);
     border-color: #000;
 }
 
 body.dark-mode .accordion-body:last-of-type {
-    border-radius: 25px;
+    border-bottom-right-radius: var(--bs-accordion-border-radius);
+    border-bottom-left-radius: var(--bs-accordion-border-radius);
     border-color: #000;
 }
 
 body.dark-mode .accordion-button:not(.collapsed) {
     background-color: #5f7cb4;
-    border-top-left-radius: 25px;
-    border-top-right-radius: 25px;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -300,72 +266,8 @@ body.dark-mode .alert-dismissible .btn-close {
 /* ------------------------------------------ */
 
 /* ------------------------------------------ 2.0 Statistics/Past Records Page ------------------------------------------ */
-body.dark-mode header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 0 5%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 5;
-    background: #0c0c0cbb;
-    box-shadow: 0 4px 30px #0000001a;
-    backdrop-filter: blur(5px);
-    transition: all 0.5s ease;
-}
-
-
-body.dark-mode .nav-item {
-    position: relative;
-    color: #fff;
-    font-size: 1rem;
-    font-weight: 500;
-    line-height: 25px;
-    letter-spacing: -0.13px;
-    text-decoration: none;
-    transition: all 0.5s ease;
-}
-
-body.dark-mode .nav-item:hover {
-    color: #80a8cc;
-}
-
-body.dark-mode .nav-item.active {
-    font-weight: bold;
-    border-bottom: 2px solid #7b7c64;
-    text-decoration: none;
-    line-height: 40px;
-    color: #a2a390;
-}
-
-body.dark-mode .nav-item-toggle {
-    position: relative;
-    line-height: 25px;
-    letter-spacing: -0.13px;
-    text-decoration: none;
-    margin-left: 2.5rem;
-    transition: all 0.5s ease;
-}
-
-body.dark-mode .nav-item-toggle:hover:after,
-body.dark-mode .nav-item-toggle::after {
-    background-color: none;
-}
-
-body.dark-mode .icons i {
-    color: #ffffff;
-}
-
-body.dark-mode #menu-icon,
-body.dark-mode #close-icon {
-    color: #ffffff;
-    font-size: 30px;
-}
-
-body.dark-mode #check {
-    display: none;
+body.dark-mode .card-header {
+    background-color: #484a4b;
 }
 
 body.dark-mode a {
