--- a/css/style.css
+++ b/css/style.css
@@ -534,8 +534,8 @@ section.follow-area.clearfix {
     width: 40px;
     height: 40px;
     bottom: 54px;
-    background-color: #b4c5e6;
-    color: #272727;
+    background-color: #1c7293;
+    color: #fff;
     text-align: center;
     -webkit-transition-duration: 500ms;
     -o-transition-duration: 500ms;
@@ -548,7 +548,7 @@ section.follow-area.clearfix {
 
 #scrollUp:focus,
 #scrollUp:hover {
-    background-color: #80a8cc;
+    background-color: #21295c;
     color: #ffffff;
 }
 
@@ -571,8 +571,8 @@ section.follow-area.clearfix {
     padding: 0 30px;
     text-align: center;
     text-transform: capitalize;
-    background-color: #e4e6cf;
-    color: #252525;
+    background-color: #1c7293;
+    color: #fff;
     border-radius: 60px;
     -webkit-transition-duration: 500ms;
     -o-transition-duration: 500ms;
@@ -580,16 +580,21 @@ section.follow-area.clearfix {
 }
 
 .pw-btn.btn-2 {
-    color: #252525;
+    color: #fff;
+}
+
+.wbnrfz_btn_theme:hover {
+    background-color: #21295c;
 }
 
 .pw-btn:focus,
-.pw-btn:hover {
-    font-weight: 500;
-    -webkit-box-shadow: 0 2px 40px 8px rgba(15, 15, 15, 0.15);
-    box-shadow: 0 2px 40px 8px rgba(15, 15, 15, 0.15);
-    background-color: #80a8cc;
-    color: #ffffff;
+.pw-btn:hover,
+.pw-btn.btn-2:hover{
+font-weight: 500;
+-webkit-box-shadow: 0 2px 40px 8px rgba(15, 15, 15, 0.15);
+box-shadow: 0 2px 40px 8px rgba(15, 15, 15, 0.15);
+background-color: #21295c;
+color: #ffffff;
 }
 
 .badges-btn {
@@ -1402,8 +1407,8 @@ img.profile-pic {
 
 
 .row-ri {
-    padding-left: 6em;
-    padding-right: 6em;
+    padding-left: 5.5em;
+    padding-right: 5em;
 }
 
 #lrd {
@@ -1512,54 +1517,6 @@ img.profile-pic {
 
 .card-header:first-child {
     border-radius: calc(25px - 1px) calc(25px - 1px) 0 0;
-}
-
-.card-header-ri-active {
-    padding: 0.75rem 1.25rem;
-    margin-bottom: 0;
-    border-bottom: 0;
-    background-color: #9eb0d1;
-    border-radius: calc(25px - 1px) calc(25px - 1px) 0 0;
-    color: #052c65;
-}
-
-.card-header-ri {
-    padding: 0.75rem 1.25rem;
-    margin-bottom: 0;
-    border-bottom: 0;
-    background-color: #f8f8f8;
-    border-radius: calc(25px - 1px) calc(25px - 1px) 0 0;
-    font-size: 15px;
-}
-
-.card-ri-active {
-    background-color: #b2c3e3;
-    padding: 0rem;
-    border-radius: 25px;
-    margin-bottom: 2em !important;
-    width: 30.5rem !important;
-}
-
-.card-ri {
-    background-color: #fff;
-    padding: 0rem;
-    border-radius: 25px;
-    margin-bottom: 2em !important;
-    width: 30.5rem !important;
-}
-
-.card-ri,
-.card-ri-active {
-    min-width: 320px;
-    max-width: 380px;
-    width: 100%;
-    min-height: 260px;
-    max-height: 340px;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: stretch;
-    box-sizing: border-box;
 }
 
 .swiper-slide {
@@ -2651,9 +2608,59 @@ h4.stn:hover {
     border-radius: 25px;
 }
 
-.card-ri {
+.card-header-ri-active {
+    padding: 0.75rem 1.25rem;
+    margin-bottom: 0;
+    border-bottom: 0;
+    background-color: #9eb0d1;
+    border-radius: calc(25px - 1px) calc(25px - 1px) 0 0;
+    color: #052c65;
+}
+
+.card-header-ri {
+    padding: 0.75rem 1.25rem;
+    margin-bottom: 0;
+    border-bottom: 0;
+    background-color: #b4c5e6;
+    border-radius: calc(25px - 1px) calc(25px - 1px) 0 0;
+    font-size: 15px;
+}
+
+.card-ri-active {
+    background-color: #b2c3e3;
+    padding: 0rem;
     border-radius: 25px;
-    background-color: #FFF;
+    margin-bottom: 2em !important;
+    width: 30.5rem !important;
+}
+
+.card-ri {
+    background-color: #f5f6f2;
+    padding: 0rem;
+    border-radius: 25px;
+    margin-bottom: 2em !important;
+    width: 30.5rem !important;
+}
+
+.card-ri,
+.card-ri-active {
+    min-width: 320px;
+    max-width: 520px;
+    width: 100%;
+    min-height: 260px;
+    max-height: 340px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
+    box-sizing: border-box;
+    box-shadow: 3px 0 15px -1px rgba(0, 0, 0, 0.15);
+}
+
+.card-text-ri {
+    color: #052c65;
+    font-size: 16px;
+    margin-bottom: 0.5rem;
 }
 
 .image-content,
@@ -2789,29 +2796,18 @@ h4.stn:hover {
 }
 
 
-.swiper-blur-left,
-.swiper-blur-right {
-    position: absolute;
-    top: 0;
-    width: 48px;
-    height: 100%;
-    z-index: 2;
+/* .swiper-button-next.swiper-navBtn,
+.swiper-button-prev.swiper-navBtn {
+    opacity: 0;
     pointer-events: none;
+    transition: opacity 0.2s;
 }
 
-.swiper-blur-left,
-.swiper-blur-right {
-    filter: none;
-    transition: filter 0.3s;
-}
-
-/* Show blur only when a Swiper nav button is active (clicked/focused) */
-.swiper-button-next:active~.swiper-blur-right,
-.swiper-button-next:focus~.swiper-blur-right,
-.swiper-button-prev:active~.swiper-blur-left,
-.swiper-button-prev:focus~.swiper-blur-left {
-    filter: blur(5px);
-}
+.slide-container.swiper:hover .swiper-button-next.swiper-navBtn,
+.slide-container.swiper:hover .swiper-button-prev.swiper-navBtn {
+    opacity: 1;
+    pointer-events: auto;
+} */
 
 /* Hide Swiper arrows if not scrollable (Swiper adds these classes automatically) */
 .swiper-button-disabled,
@@ -2834,11 +2830,12 @@ h4.stn:hover {
     }
 }
 
-@media (max-width: 576px) {
+@media (max-width: 575px) {
     .slide-content {
         margin: 0 0px !important;
         padding: 0 4vw !important;
     }
+
     .swiper-slide {
         width: 100vw !important;
         max-width: 100vw !important;
@@ -2846,6 +2843,7 @@ h4.stn:hover {
         box-sizing: border-box;
         padding: 0 !important;
     }
+
     .card-ri,
     .card-ri-active {
         min-width: 0 !important;
